--- a/etc/ini/vhost-generator.yml
+++ b/etc/ini/vhost-generator.yml
@@ -1,2 +1,3 @@
-template: /etc/vhost/template.conf
-vhost: /etc/vhost/virtualhost.conf
+templates:
+  "/etc/vhost/template.dev.conf": "/etc/vhost/virtualhost.dev.conf"
+  "/etc/vhost/template.prod.conf": "/etc/vhost/virtualhost.prod.conf"
