--- a/etc/ini/env.yml
+++ b/etc/ini/env.yml
@@ -9,7 +9,7 @@ database:
     port: 3306
     user: root
     password:
-    database: mik_login
+    database: eternity2
     charset: utf8
 
 boot-sequence:
