--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "minime/annotations": "~3.0",
         "symfony/yaml": "^4.2",
         "symfony/console": "^3.4.28",
-        "riimu/kit-phpencoder": "^2.3"
+        "riimu/kit-phpencoder": "^2.3",
+        "laborci/valentine-date": "^1.0"
     },
     "autoload": {
         "psr-4": {
