--- a/etc/ini/ghost.yml
+++ b/etc/ini/ghost.yml
@@ -6,6 +6,11 @@ generator:
 
 attachment:
     path: public/attachments
-    url: attachments
+    url: /attachments
     meta-db-path: var/attachment-meta
 
+thumbnail:
+    path: public/thumbnails
+    secret: ferengi
+    url: /thumbnail
+    source-path: public/attachments
