thumbnail responder live

--- a/etc/vhost/template.dev.conf
+++ b/etc/vhost/template.dev.conf
@@ -23,7 +23,7 @@
 
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_URI} !^/?(\!?(thumbnails/files/|img/|css/|js/))/?(.*)
+        RewriteCond %{REQUEST_URI} !^/?(\!?(thumbnails/|attachments/|img/|css/|js/))/?(.*)
         RewriteRule . /index.php [L]
     </Directory>
 </VirtualHost>
