--- a/etc/vhost/template.dev.conf
+++ b/etc/vhost/template.dev.conf
@@ -6,6 +6,9 @@
 	DocumentRoot "{{root}}public/"
 	ErrorLog {{root}}var/error.log
 
+
+    Alias /fs "{{root}}/var/attachments"
+
     <Directory "{{root}}public">
 
 
@@ -23,8 +26,9 @@
 
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_URI} !^/?(\!?(thumbnails/|attachments/|img/|css/|js/))/?(.*)
+        RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
         RewriteRule . /index.php [L]
+
     </Directory>
 </VirtualHost>
 
