--- a/etc/vhost/template.prod.conf
+++ b/etc/vhost/template.prod.conf
@@ -8,6 +8,8 @@
 
     SetEnv LOAD_ENV_CACHE = "yes"
 
+    Alias /fs "{{root}}/var/attachments"
+
     <Directory "{{root}}public">
         Require all granted
         AllowOverride all
@@ -23,8 +25,9 @@
 
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_URI} !^/?(\!?(thumbnails/|attachments/|img/|css/|js/))/?(.*)
+        RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
         RewriteRule . /index.php [L]
+
     </Directory>
 </VirtualHost>
 
