--- a/etc/vhost/template.dev.conf
+++ b/etc/vhost/template.dev.conf
@@ -6,12 +6,10 @@
 	DocumentRoot "{{root}}public/"
 	ErrorLog {{root}}var/error.log
 
-
-    Alias /fs "{{root}}/var/attachments"
+    Alias /fs "{{root}}/data/attachment"
+    Alias /thumbnail "{{root}}/var/thumbnail"
 
     <Directory "{{root}}public">
-
-
         Require all granted
         AllowOverride all
 
@@ -28,8 +26,10 @@
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
         RewriteRule . /index.php [L]
-
     </Directory>
+
+
+
 </VirtualHost>
 
 
