--- a/etc/vhost/template.prod.conf
+++ b/etc/vhost/template.prod.conf
@@ -6,9 +6,9 @@
 	DocumentRoot "{{root}}public/"
 	ErrorLog {{root}}var/error.log
 
-    SetEnv LOAD_ENV_CACHE = "yes"
+    Alias /fs "{{root}}/data/attachment"
+    Alias /thumbnail "{{root}}/var/thumbnail"
 
-    Alias /fs "{{root}}/var/attachments"
 
     <Directory "{{root}}public">
         Require all granted
@@ -27,8 +27,10 @@
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
         RewriteRule . /index.php [L]
-
     </Directory>
+
+    SetEnv LOAD_ENV_CACHE = "yes"
+
 </VirtualHost>
 
 
