--- a/etc/vhost/template.prod.conf
+++ b/etc/vhost/template.prod.conf
@@ -6,26 +6,31 @@
 	DocumentRoot "{{root}}public/"
 	ErrorLog {{root}}var/error.log
 
-    Alias /fs "{{root}}/data/attachment"
-    Alias /thumbnail "{{root}}/var/thumbnail"
-
+    Alias /fs "{{root}}data/attachment"
+    Alias /thumbnail "{{root}}var/thumbnail"
 
     <Directory "{{root}}public">
         Require all granted
         AllowOverride all
-
         php_flag session.cookie_httponly on
         php_flag log_errors on
         php_flag display_errors off
         php_value error_reporting 2147483647
         php_value error_log {{root}}var/app.log
-
         Options -Indexes
         Options +FollowSymlinks
 
-        RewriteEngine On
+        #redirect trailing slases
+        RewriteRule ^(.*)/$ /$1 [L,R=301]
+
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
+        RewriteRule . /index.php [L]
+    </Directory>
+
+    <Directory "{{root}}var/thumbnail">
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule . /index.php [L]
     </Directory>
 
