--- a/etc/vhost/template.dev.conf
+++ b/etc/vhost/template.dev.conf
@@ -20,6 +20,8 @@
         Options -Indexes
         Options +FollowSymlinks
 
+        RewriteEngine On
+
         #redirect trailing slases
         RewriteRule ^(.*)/$ /$1 [L,R=301]
 
