--- a/etc/ini/ghost.yml
+++ b/etc/ini/ghost.yml
@@ -1,7 +1,7 @@
 default-database: DefaultDBConnection
 
 generator:
-    ghost-path: /src/Ghost
+    ghost-path: src/Ghost
     ghost-namespace: Ghost
 
 attachment-config: GhostAttachmentConfig
