--- a/etc/ini/cli-application.yml
+++ b/etc/ini/cli-application.yml
@@ -1,5 +1,7 @@
 commands:
   - \Eternity2\System\VhostGenerator\CliCommandGenerateVhost
   - \Eternity2\System\Env\CliCommandGenerateEnv
+  - \Eternity2\Ghost\Generator\CliCommand
+
   - \Eternity2\RedFox\Generator\CreateEntityCliCommand
   - \Eternity2\RedFox\Generator\UpdateEntitiesCliCommand
