--- a/etc/ini/env.yml
+++ b/etc/ini/env.yml
@@ -5,7 +5,7 @@ output-buffering: true
 database:
   default:
     scheme: mysql
-    host: mariadb
+    host: host.docker.internal
     port: 3306
     user: root
     password:
