--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/z-build"]
 	path = external/z-build
 	url = https://github.com/laborci/z-build.git
+[submodule "external/z-ui"]
+	path = external/z-ui
+	url = https://github.com/laborci/z-ui.git
