--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/z-ui"]
 	path = external/z-ui
 	url = https://github.com/laborci/z-ui.git
+[submodule "external/z-codex"]
+	path = external/z-codex
+	url = https://github.com/laborci/z-codex.git
