--- a/etc/ini/env.yml
+++ b/etc/ini/env.yml
@@ -1,8 +1,9 @@
-domain: e2.hu
+domain: e2.test
 timezone: Europe/Budapest
 output-buffering: true
 boot-sequence:
   - \Application\Service\ServiceRegistry
+# - \Eternity2\RemoteLog\RemoteLogBoot
   - \Eternity2\System\Mission\MissionRunner
 
 :annotation-reader: config/annotation-reader
@@ -15,6 +16,7 @@ boot-sequence:
 :vhost-generator: config/vhost-generator
 :web-responder: config/web-responder
 
+# MISSIONS
 :missions.cli: missions/cli
 :missions.admin: missions/admin
 :missions.api: missions/api
