--- a/etc/ini/config/database.yml
+++ b/etc/ini/config/database.yml
@@ -1,8 +1,8 @@
 default:
   scheme: mysql
-  host: host.docker.internal
+  host: localhost
   port: 3306
   user: root
-  password:
-  database: eternity2
+  password: root
+  database: eternity
   charset: utf8
