--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "elvis/eternity2",
+    "name": "laborci/eternity2project",
     "authors": [
         {
             "name": "Gergely Laborci",
