--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 		"work": "webpack --progress --colors --watch  --mode development"
 	},
 	"dependencies": {
-		"@babel/core": "^7.5.5",
+		"@babel/core": "^7.6.0",
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-decorators": "^7.1.2",
+		"@babel/plugin-proposal-decorators": "^7.6.0",
 		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-		"@babel/plugin-proposal-optional-chaining": "^7.0.0",
-		"@babel/preset-env": "^7.5.5",
-		"@fortawesome/fontawesome-pro": "^5.9.0",
+		"@babel/plugin-proposal-optional-chaining": "^7.6.0",
+		"@babel/preset-env": "^7.6.0",
+		"@fortawesome/fontawesome-pro": "^5.10.2",
 		"babel-loader": "^8.0.4",
 		"babel-polyfill": "^6.26.0",
 		"copy": "^0.3.0",
@@ -38,13 +38,13 @@
 		"style-loader": "^0.18.2",
 		"twig-loader": "^0.4.1",
 		"watchify": "^3.9.0",
-		"webpack": "^4.38.0",
-		"z-build": "file:node_external/z-build",
-		"z-codex": "file:node_external/z-codex",
-		"z-ui": "file:node_external/z-ui",
-		"zengular": "file:node_external/zengular"
+		"webpack": "^4.39.3",
+		"zengular": "^2.0.1",
+		"zengular-build": "^2.0.0",
+		"zengular-codex": "^1.0.1",
+		"zengular-ui": "^1.0.1"
 	},
 	"devDependencies": {
-		"webpack-cli": "^3.3.6"
+		"webpack-cli": "^3.3.8"
 	}
 }
