--- a/etc/ini/env.yml
+++ b/etc/ini/env.yml
@@ -1,10 +1,27 @@
 domain: e2.test
 timezone: Europe/Budapest
 output-buffering: true
+language: hu
 boot-sequence:
-  - \Application\Service\ServiceRegistry
-# - \Eternity2\RemoteLog\RemoteLogBoot
+  - \Application\ServiceRegistry\ServiceRegistry
+  - \Eternity2\RemoteLog\RemoteLogBoot
   - \Eternity2\System\Mission\MissionRunner
+
+modules:
+  Codex: \Eternity2\Module\Codex\Module
+  SmartPageResponder: \Eternity2\Module\SmartPageResponder\Module
+  CodexAuth: \Eternity2\Module\CodexAuth\Module
+  Zuul: \Eternity2\Module\Zuul\Module
+
+path:
+  ~var: var/
+  ~etc: etc/
+  ~data: data/
+  ~public: public/
+  ~src: app/
+  ~assets: assets/
+  ~dev: dev/
+  ~(path.var)tmp: tmp/
 
 :annotation-reader: config/annotation-reader
 :database: config/database
