--- a/etc/vhost/template.dev.conf
+++ b/etc/vhost/template.dev.conf
@@ -3,37 +3,49 @@
 	ServerAlias *.{{domain}}
 
     DirectoryIndex index.php
-	DocumentRoot "{{root}}public/"
+	DocumentRoot "{{path.public}}"
 	ErrorLog {{root}}var/error.log
 
-    Alias /fs "{{root}}data/attachment"
-    Alias /thumbnail "{{root}}var/thumbnail"
+    Alias {{attachment.url}} "{{attachment.path}}"
+    Alias {{thumbnail.url}} "{{thumbnail.path}}"
 
-    <Directory "{{root}}public">
+    <Directory "{{path.public}}">
         Require all granted
         AllowOverride all
         php_flag session.cookie_httponly on
         php_flag log_errors on
         php_flag display_errors off
         php_value error_reporting 2147483647
-        php_value error_log {{root}}var/app.log
+        php_value error_log {{path.var}}app.log
         Options -Indexes
         Options +FollowSymlinks
 
         RewriteEngine On
 
-        #redirect trailing slases
-        RewriteRule ^(.*)/$ /$1 [L,R=301]
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule ^(.*)/$ /$1 [L,R]
 
+        RewriteCond %{REQUEST_URI} !(^/~fs/.+)
+        RewriteCond %{REQUEST_URI} !(^/~fonts/.+)
+        RewriteCond %{REQUEST_URI} !(^/~admin/.+)
+        RewriteCond %{REQUEST_URI} !(^/~web/.+)
+        RewriteCond %{REQUEST_URI} !(^/~favicon/.+)
         RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
         RewriteRule . /index.php [L]
+
     </Directory>
 
-    <Directory "{{root}}var/thumbnail">
+    <Directory "{{thumbnail.path}}">
+        Require all granted
+        AllowOverride all
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule . /index.php [L]
+    </Directory>
+
+    <Directory "{{attachment.path}}">
+        Require all granted
+        AllowOverride all
     </Directory>
 
 </VirtualHost>
