--- a/etc/ini/config/attachment.yml
+++ b/etc/ini/config/attachment.yml
@@ -1,3 +1,3 @@
-~path: data/attachment/
-~meta-db-path: data/attachment-meta/
+~(path.data)path: attachment/
+~(path.data)meta-db-path: attachment-meta/
 url: /fs
