--- a/etc/vhost/template.prod.conf
+++ b/etc/vhost/template.prod.conf
@@ -22,11 +22,15 @@
 
         RewriteEngine On
 
-        #redirect trailing slases
-        RewriteRule ^(.*)/$ /$1 [L,R=301]
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule ^(.*)/$ /$1 [L,R]
 
+        RewriteCond %{REQUEST_URI} !(^/~fs/.+)
+        RewriteCond %{REQUEST_URI} !(^/~fonts/.+)
+        RewriteCond %{REQUEST_URI} !(^/~admin/.+)
+        RewriteCond %{REQUEST_URI} !(^/~web/.+)
+        RewriteCond %{REQUEST_URI} !(^/~favicon/.+)
         RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_URI} !^/?(\!?(fs|fonts|admin|web|favicon))/?(.*)
         RewriteRule . /index.php [L]
     </Directory>
 
@@ -34,6 +38,19 @@
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule . /index.php [L]
+    </Directory>
+
+    <Directory "{{thumbnail.path}}">
+        Require all granted
+        AllowOverride all
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule . /index.php [L]
+    </Directory>
+
+    <Directory "{{attachment.path}}">
+        Require all granted
+        AllowOverride all
     </Directory>
 
     SetEnv LOAD_ENV_CACHE = "yes"
