--- a/etc/ini/missions/www.yml
+++ b/etc/ini/missions/www.yml
@@ -1,6 +1,5 @@
 pattern: www.{domain}
 mission: \Application\Mission\Web\Missionary
 modules:
-  \Eternity2\Module\SmartPageResponder\Module:
-    twig-sources:
-      ~web: /app/Mission/Web/Page/@template/
+  SmartPageResponder.twig-sources.~(path.src)web: Mission/Web/Page/@template/
+
