--- a/etc/ini/config/ghost.yml
+++ b/etc/ini/config/ghost.yml
@@ -1,4 +1,4 @@
 default-database: DefaultDBConnection
 generator:
-  ~(path.src)ghost-path: Ghost
+  ~ghost-path: app.ghost
   ghost-namespace: Ghost
