--- a/etc/ini/env.yml
+++ b/etc/ini/env.yml
@@ -1,9 +1,8 @@
-domain: e2.test
+domain: eternity.test
 timezone: Europe/Budapest
 output-buffering: true
-language: hu
 boot-sequence:
-  - \Application\ServiceRegistry\ServiceRegistry
+  - \Application\Service\ServiceRegistry
   - \Eternity2\RemoteLog\RemoteLogBoot
   - \Eternity2\System\Mission\MissionRunner
 
@@ -14,15 +13,13 @@ modules:
   Zuul: \Eternity2\Module\Zuul\Module
 
 path:
-  ~var: var/
-  ~etc: etc/
   ~data: data/
-  ~public: public/
-  ~src: app/
-  ~assets: assets/
   ~dev: dev/
+  ~etc: etc/
+  ~src: app/
+  ~public: public/
+  ~var: var/
   ~(path.var)tmp: tmp/
-
 
 :annotation-reader: config/annotation-reader
 :database: config/database
