--- a/etc/ini/missions/admin.yml
+++ b/etc/ini/missions/admin.yml
@@ -1,8 +1,27 @@
 pattern: admin.{domain}
-mission: \Application\Mission\Admin\Missionary
-:modules.Codex: modules/codex
-:modules.Zuul: modules/zuul
-:modules.CodexAuth: modules/codex-auth
+mission: \Eternity2\Module\Codex\Missionary
 modules:
-  SmartPageResponder.twig-sources.~(path.src)admin: Mission/Admin/Page/@template/
+  Zuul:
+    services:
+      AuthRepository: \Application\Service\Auth\AuthRepository
+      Authenticable: \Ghost\User
+  SmartPageResponder: true
 
+  Codex:
+    frontend-prefix: /~admin/
+    codex-forms:
+      - Application\AdminCodex\UserCodex
+    services:
+      WhoAmI: \Application\Service\Auth\CodexWhoAmI
+    admin:
+      icon: fab fa-wikipedia-w
+      title: Wiki
+      login-placeholder: e-mail
+    menu:
+      - label: Felhasználók
+        icon: fas fa-user
+        event: SHOW-FORM
+        data.name: UserCodex
+  CodexAuth:
+    login-page: \Eternity2\Module\Codex\Page\Login
+    permission: admin
