--- a/etc/vhost/virtualhost.fpm.conf
+++ b/etc/vhost/virtualhost.fpm.conf
@@ -15,12 +15,6 @@
         Options -Indexes
         Options +FollowSymlinks
 
-        php_flag session.cookie_httponly on
-        php_flag log_errors on
-        php_flag display_errors off
-        php_value error_reporting 2147483647
-        php_value error_log {{path.var}}error.log
-
         RewriteEngine On
 
         RewriteCond %{REQUEST_FILENAME} !-d
@@ -44,6 +38,10 @@
         Require all granted
         AllowOverride all
     </Directory>
+
+    <FilesMatch \.php$>
+        SetHandler "proxy:unix:/usr/local/var/run/php7.4-fpm.sock|fcgi://localhost/"
+    </FilesMatch>
 
 </VirtualHost>
 
